HUE-7013 [backend] Provide Kerberos Mutual Authentication disable switch in "hue.ini"
For Hue Server when secure Kerberised setup is enabled some times we need to disable
"mutual authentication" to DISABLE. This code change provides that feature.

By default "mutual authentication" is set as "OPTIONAL"(there is no change in default setting)
One can set "REQUIRED" or "OPTIONAL" or "DISABLE" values.

To disable "mutual authentication" One can put following values in safety valve :
Hue Service Advanced Configuration Snippet (Safety Valve) for hue_safety_valve.ini
[desktop]
[[kerberos]]
mutual_authentication="DISABLED"

Testing Done:
- Manual testing
- Tested on cluster

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -634,6 +634,8 @@
     # Path to kinit
     ## kinit_path=/path/to/kinit
 
+    # Mutual authentication from the server, attaches HTTP GSSAPI/Kerberos Authentication to the given Request object
+    ## mutual_authentication="OPTIONAL" or "REQUIRED" or "DISABLED"
 
   # Configuration options for using OAuthBackend (Core) login
   # ------------------------------------------------------------------------
