HUE-7050 [assist] Add a feature flag for the new generic context popover

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -175,6 +175,9 @@
   # Choose whether to enable the new global search or not.
   ## use_new_global_search=false
 
+  # Choose whether to enable the new generic context popover or not.
+  ## use_new_context_popover=false
+
   # Choose whether to enable SQL syntax check or not
   ## enable_sql_syntax_check=false
 
